# ChattyPy

./: .gitignore  .replit  README.md  pyproject.toml  setup.cfg  setup.py
src/: example.py
src/chattypy/: bot.py
