[project]
name = "chattypy"
version = "0.1.3"
authors = [
  { name="LuisAFK", email="so.yl.a.fk@googlemail.com" },
]
description = "ChattyPy is a library made in Python for making Chatty bots."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/lafkpages/ChattyPy"
"Bug Tracker" = "https://github.com/lafkpages/ChattyPy/issues"

[tool.poetry]
packages = [
  { include = "src/chattypy/" }
]

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"