[metadata]
name = chattypy
version = 0.1.3
author = LuisAFK
author_email = so.yl.a.fk@googlemail.com
description = ChattyPy is a library made in Python for making Chatty bots.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = chatty, bot, api, python, chattypy
status = stable
url = https://github.com/lafkpages/ChattyPy
project_urls =
    Documentation = https://github.com/lafkpages/ChattyPy
    Source Code = https://github.com/lafkpages/ChattyPy
    Bug Tracker = https://github.com/lafkpages/ChattyPy/issues
    Discussions = https://github.com/lafkpages/ChattyPy/discussions
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src